update receiving board project with filters configuration

--- a/Receive/ReceiveFilters.ioc
+++ b/Receive/ReceiveFilters.ioc
@@ -81,8 +81,8 @@ ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Src
 ProjectManager.PreviousToolchain=TrueSTUDIO
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=Receive.ioc
-ProjectManager.ProjectName=Receive
+ProjectManager.ProjectFileName=ReceiveFilters.ioc
+ProjectManager.ProjectName=ReceiveFilters
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
@@ -133,4 +133,4 @@ RCC.USBFreq_Value=72000000
 RCC.VCOOutput2Freq_Value=8000000
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-board=Receive
+board=ReceiveFilters
