add results of tests with Bamocar

--- a/BamocarControlBoard-HILtest/BamocarControlBoard-HILtest.ioc
+++ b/BamocarControlBoard-HILtest/BamocarControlBoard-HILtest.ioc
@@ -4,7 +4,7 @@ CAN.BS2=CAN_BS2_3TQ
 CAN.CalculateTimeBit=4000
 CAN.CalculateTimeQuantum=500.0
 CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit,BS2,BS1,SJW,Prescaler,Mode
-CAN.Mode=CAN_MODE_LOOPBACK
+CAN.Mode=CAN_MODE_NORMAL
 CAN.Prescaler=18
 CAN.SJW=CAN_SJW_4TQ
 Dma.Request0=USART2_RX
