--- a/TrueStudioProject/Motor_controller_F303CC.ioc
+++ b/TrueStudioProject/Motor_controller_F303CC.ioc
@@ -69,11 +69,11 @@ Dma.DAC_CH1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAl
 Dma.Request0=DAC_CH1
 Dma.Request1=ADC1
 Dma.RequestsNb=2
-FREERTOS.BinarySemaphores01=ADC,Static,ADC_SEM_ControlBlock;CAN,Static,CAN_SEM_ControlBlock
+FREERTOS.BinarySemaphores01=ADC1,Static,ADC1_SEM_ControlBlock;CAN,Static,CAN_SEM_ControlBlock;ADC2,Static,ADC2_SEM_ControlBlock;Matlab_SEM,Static,Matlab_ControlBlock
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configTICK_RATE_HZ,configMINIMAL_STACK_SIZE,configTOTAL_HEAP_SIZE,FootprintOK,MEMORY_ALLOCATION,configUSE_TIMERS,BinarySemaphores01
 FREERTOS.MEMORY_ALLOCATION=1
-FREERTOS.Tasks01=defaultTask,0,256,StartDefaultTask,Default,NULL,Static,defaultTaskBuffer,defaultTaskControlBlock;CAN_IRQ,2,1024,CAN_IRQ_Entry,Default,NULL,Static,CAN_Buffer,CAN_ControlBlock;Matlab,0,1024,Matlab_Entry,Default,NULL,Static,MatlabBuffer,MatlabControlBlock;ADC_IRQ,1,1024,ADC_Entry,Default,NULL,Static,ADC_Buffer,ADC_ControlBlock
+FREERTOS.Tasks01=defaultTask,0,256,StartDefaultTask,Default,NULL,Static,defaultTaskBuffer,defaultTaskControlBlock;CAN_IRQ,2,1024,CAN_IRQ_Entry,Default,NULL,Static,CAN_Buffer,CAN_ControlBlock;Matlab,0,1024,Matlab_Entry,Default,NULL,Static,MatlabBuffer,MatlabControlBlock;ADC1_IRQ,1,1024,ADC1_Entry,Default,NULL,Static,ADC1_Buffer,ADC1_ControlBlock;ADC2_IRQ,-3,256,ADC2_Entry,Default,NULL,Static,ADC2_5Buffer,ADC2_ControlBlock
 FREERTOS.configMINIMAL_STACK_SIZE=256
 FREERTOS.configTICK_RATE_HZ=50
 FREERTOS.configTOTAL_HEAP_SIZE=32000
@@ -91,7 +91,9 @@ KeepUserPlacement=true
 Mcu.Family=STM32F3
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
-Mcu.IP10=TIM6
+Mcu.IP10=TIM2
+Mcu.IP11=TIM6
+Mcu.IP12=TIM7
 Mcu.IP2=CAN
 Mcu.IP3=DAC
 Mcu.IP4=DMA
@@ -100,7 +102,7 @@ Mcu.IP6=I2C2
 Mcu.IP7=NVIC
 Mcu.IP8=RCC
 Mcu.IP9=SYS
-Mcu.IPNb=11
+Mcu.IPNb=13
 Mcu.Name=STM32F303C(B-C)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PF0-OSC_IN
@@ -118,8 +120,11 @@ Mcu.Pin19=PB6
 Mcu.Pin2=PA0
 Mcu.Pin20=PB7
 Mcu.Pin21=VP_FREERTOS_VS_ENABLE
-Mcu.Pin22=VP_SYS_VS_tim1
-Mcu.Pin23=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin22=VP_SYS_VS_Systick
+Mcu.Pin23=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin24=VP_TIM2_VS_no_output1
+Mcu.Pin25=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin26=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin3=PA1
 Mcu.Pin4=PA4
 Mcu.Pin5=PA5
@@ -127,7 +132,7 @@ Mcu.Pin6=PA7
 Mcu.Pin7=PB13
 Mcu.Pin8=PB14
 Mcu.Pin9=PB15
-Mcu.PinsNb=24
+Mcu.PinsNb=27
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303CCTx
@@ -145,9 +150,7 @@ NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:false
-NVIC.TIM1_UP_TIM16_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.TimeBase=TIM1_UP_TIM16_IRQn
-NVIC.TimeBaseIP=TIM1
+NVIC.TIM2_IRQn=true\:5\:0\:false\:false\:true\:true\:true
 NVIC.USB_LP_CAN_RX0_IRQn=true\:5\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA0.GPIOParameters=GPIO_Label
@@ -250,7 +253,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_TIM6_Init-TIM6-false-HAL-true,7-MX_DAC_Init-DAC-false-HAL-true,8-MX_CAN_Init-CAN-false-HAL-true,9-MX_I2C2_Init-I2C2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_TIM6_Init-TIM6-false-HAL-true,7-MX_DAC_Init-DAC-false-HAL-true,8-MX_CAN_Init-CAN-false-HAL-true,9-MX_I2C2_Init-I2C2-false-HAL-true,10-MX_TIM7_Init-TIM7-false-HAL-true,11-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
 RCC.AHBFreq_Value=72000000
@@ -294,13 +297,27 @@ SH.COMP_DAC1_group.0=DAC_OUT1,DAC_OUT1
 SH.COMP_DAC1_group.ConfNb=1
 SH.COMP_DAC2_group.0=DAC_OUT2,Enable_DAC_OUT2
 SH.COMP_DAC2_group.ConfNb=1
-TIM6.IPParameters=Prescaler,Period
+TIM2.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
+TIM2.IPParameters=Channel-Output Compare1 No Output,Prescaler,Period
+TIM2.Period=499
+TIM2.Prescaler=7199
+TIM6.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
+TIM6.IPParameters=Prescaler,Period,AutoReloadPreload
 TIM6.Period=49
 TIM6.Prescaler=7199
+TIM7.IPParameters=Prescaler,Period
+TIM7.Period=49
+TIM7.Prescaler=7199
 VP_FREERTOS_VS_ENABLE.Mode=Enabled
 VP_FREERTOS_VS_ENABLE.Signal=FREERTOS_VS_ENABLE
-VP_SYS_VS_tim1.Mode=TIM1
-VP_SYS_VS_tim1.Signal=SYS_VS_tim1
+VP_SYS_VS_Systick.Mode=SysTick
+VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM2_VS_no_output1.Mode=Output Compare1 No Output
+VP_TIM2_VS_no_output1.Signal=TIM2_VS_no_output1
 VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
+VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
 board=Motor_controller_F303CC
