--- a/TrueStudioProject/Motor_controller_F303CC.ioc
+++ b/TrueStudioProject/Motor_controller_F303CC.ioc
@@ -27,18 +27,37 @@ ADC1.Overrun=ADC_OVR_DATA_OVERWRITTEN
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.Rank-1\#ChannelRegularConversion=2
 ADC1.Resolution=ADC_RESOLUTION_12B
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_4CYCLES_5
-ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_4CYCLES_5
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_181CYCLES_5
+ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_181CYCLES_5
 ADC1.ScanConvMode=ADC_SCAN_ENABLE
 ADC1.master=1
-ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_4
-ADC2.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_4
+ADC2.Channel-10\#ChannelRegularConversion=ADC_CHANNEL_4
 ADC2.Channel-IN4=ADC_CHANNEL_4
 ADC2.Channel-IN5=ADC_CHANNEL_5
 ADC2.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV2
+ADC2.ContinuousConvMode=DISABLE
 ADC2.DMAContinuousRequests=ENABLE
-ADC2.IPParameters=Channel-IN4,Channel-IN5,Channel-4\#ChannelRegularConversion,master,NbrOfConversionFlag,Channel-0\#ChannelRegularConversion,DMAContinuousRequests,ClockPrescaler
+ADC2.DataAlign=ADC_DATAALIGN_RIGHT
+ADC2.DiscontinuousConvMode=DISABLE
+ADC2.EOCSelection=ADC_EOC_SEQ_CONV
+ADC2.EnableAnalogWatchDog1=false
+ADC2.EnableAnalogWatchDog2=false
+ADC2.EnableAnalogWatchDog3=false
+ADC2.EnableInjectedConversion=DISABLE
+ADC2.EnableRegularConversion=ENABLE
+ADC2.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T8_TRGO
+ADC2.ExternalTrigConvEdge=ADC_EXTERNALTRIGCONVEDGE_RISING
+ADC2.IPParameters=Channel-IN4,Channel-IN5,master,DMAContinuousRequests,ClockPrescaler,DiscontinuousConvMode,EnableInjectedConversion,EOCSelection,EnableRegularConversion,Rank-10\#ChannelRegularConversion,Channel-10\#ChannelRegularConversion,SamplingTime-10\#ChannelRegularConversion,OffsetNumber-10\#ChannelRegularConversion,Offset-10\#ChannelRegularConversion,NbrOfConversionFlag,ExternalTrigConv,Resolution,DataAlign,ScanConvMode,ContinuousConvMode,Overrun,LowPowerAutoWait,NbrOfConversion,ExternalTrigConvEdge,EnableAnalogWatchDog1,EnableAnalogWatchDog2,EnableAnalogWatchDog3
+ADC2.LowPowerAutoWait=DISABLE
+ADC2.NbrOfConversion=1
 ADC2.NbrOfConversionFlag=1
+ADC2.Offset-10\#ChannelRegularConversion=0
+ADC2.OffsetNumber-10\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC2.Overrun=ADC_OVR_DATA_OVERWRITTEN
+ADC2.Rank-10\#ChannelRegularConversion=1
+ADC2.Resolution=ADC_RESOLUTION_12B
+ADC2.SamplingTime-10\#ChannelRegularConversion=ADC_SAMPLETIME_181CYCLES_5
+ADC2.ScanConvMode=ADC_SCAN_DISABLE
 ADC2.master=1
 CAN.ABOM=ENABLE
 CAN.BS1=CAN_BS1_7TQ
@@ -57,6 +76,15 @@ Dma.ADC1.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 Dma.ADC1.1.PeriphInc=DMA_PINC_DISABLE
 Dma.ADC1.1.Priority=DMA_PRIORITY_HIGH
 Dma.ADC1.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.ADC2.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC2.2.Instance=DMA2_Channel1
+Dma.ADC2.2.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC2.2.MemInc=DMA_MINC_ENABLE
+Dma.ADC2.2.Mode=DMA_CIRCULAR
+Dma.ADC2.2.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC2.2.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC2.2.Priority=DMA_PRIORITY_HIGH
+Dma.ADC2.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 Dma.DAC_CH1.0.Direction=DMA_MEMORY_TO_PERIPH
 Dma.DAC_CH1.0.Instance=DMA1_Channel3
 Dma.DAC_CH1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
@@ -68,16 +96,18 @@ Dma.DAC_CH1.0.Priority=DMA_PRIORITY_HIGH
 Dma.DAC_CH1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 Dma.Request0=DAC_CH1
 Dma.Request1=ADC1
-Dma.RequestsNb=2
+Dma.Request2=ADC2
+Dma.RequestsNb=3
 FREERTOS.BinarySemaphores01=ADC1,Static,ADC1_SEM_ControlBlock;CAN,Static,CAN_SEM_ControlBlock;ADC2,Static,ADC2_SEM_ControlBlock;Matlab_SEM,Static,Matlab_ControlBlock
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,configTICK_RATE_HZ,configMINIMAL_STACK_SIZE,configTOTAL_HEAP_SIZE,FootprintOK,MEMORY_ALLOCATION,configUSE_TIMERS,BinarySemaphores01
+FREERTOS.IPParameters=Tasks01,configTICK_RATE_HZ,configMINIMAL_STACK_SIZE,configTOTAL_HEAP_SIZE,FootprintOK,MEMORY_ALLOCATION,configUSE_TIMERS,BinarySemaphores01,Timers01
 FREERTOS.MEMORY_ALLOCATION=1
-FREERTOS.Tasks01=defaultTask,0,256,StartDefaultTask,Default,NULL,Static,defaultTaskBuffer,defaultTaskControlBlock;CAN_IRQ,2,1024,CAN_IRQ_Entry,Default,NULL,Static,CAN_Buffer,CAN_ControlBlock;Matlab,0,1024,Matlab_Entry,Default,NULL,Static,MatlabBuffer,MatlabControlBlock;ADC1_IRQ,1,1024,ADC1_Entry,Default,NULL,Static,ADC1_Buffer,ADC1_ControlBlock;ADC2_IRQ,-3,256,ADC2_Entry,Default,NULL,Static,ADC2_5Buffer,ADC2_ControlBlock
+FREERTOS.Tasks01=defaultTask,-3,256,StartDefaultTask,Default,NULL,Static,defaultTaskBuffer,defaultTaskControlBlock;CAN_IRQ,2,1024,CAN_IRQ_Entry,Default,NULL,Static,CAN_Buffer,CAN_ControlBlock;Matlab,0,1024,Matlab_Entry,Default,NULL,Static,MatlabBuffer,MatlabControlBlock;ADC1_IRQ,1,1024,ADC1_Entry,Default,NULL,Static,ADC1_Buffer,ADC1_ControlBlock;ADC2_IRQ,1,1024,ADC2_Entry,Default,NULL,Static,ADC2_5Buffer,ADC2_ControlBlock
+FREERTOS.Timers01=MatlabTimer,MatlabTimerCallback,osTimerPeriodic,Default,NULL,Static,MatlabTimerControlBlock
 FREERTOS.configMINIMAL_STACK_SIZE=256
 FREERTOS.configTICK_RATE_HZ=50
 FREERTOS.configTOTAL_HEAP_SIZE=32000
-FREERTOS.configUSE_TIMERS=0
+FREERTOS.configUSE_TIMERS=1
 File.Version=6
 I2C2.Analog_Filter=I2C_ANALOGFILTER_DISABLE
 I2C2.I2C_Coeff_DF=5
@@ -91,9 +121,8 @@ KeepUserPlacement=true
 Mcu.Family=STM32F3
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
-Mcu.IP10=TIM2
-Mcu.IP11=TIM6
-Mcu.IP12=TIM7
+Mcu.IP10=TIM6
+Mcu.IP11=TIM8
 Mcu.IP2=CAN
 Mcu.IP3=DAC
 Mcu.IP4=DMA
@@ -102,37 +131,35 @@ Mcu.IP6=I2C2
 Mcu.IP7=NVIC
 Mcu.IP8=RCC
 Mcu.IP9=SYS
-Mcu.IPNb=13
+Mcu.IPNb=12
 Mcu.Name=STM32F303C(B-C)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PF0-OSC_IN
-Mcu.Pin1=PF1-OSC_OUT
-Mcu.Pin10=PA9
-Mcu.Pin11=PA10
-Mcu.Pin12=PA11
-Mcu.Pin13=PA12
-Mcu.Pin14=PA13
-Mcu.Pin15=PA14
-Mcu.Pin16=PB3
-Mcu.Pin17=PB4
-Mcu.Pin18=PB5
-Mcu.Pin19=PB6
-Mcu.Pin2=PA0
-Mcu.Pin20=PB7
-Mcu.Pin21=VP_FREERTOS_VS_ENABLE
-Mcu.Pin22=VP_SYS_VS_Systick
-Mcu.Pin23=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin24=VP_TIM2_VS_no_output1
-Mcu.Pin25=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin26=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin3=PA1
-Mcu.Pin4=PA4
-Mcu.Pin5=PA5
-Mcu.Pin6=PA7
-Mcu.Pin7=PB13
-Mcu.Pin8=PB14
-Mcu.Pin9=PB15
-Mcu.PinsNb=27
+Mcu.Pin1=PA0
+Mcu.Pin10=PA10
+Mcu.Pin11=PA11
+Mcu.Pin12=PA12
+Mcu.Pin13=PA13
+Mcu.Pin14=PA14
+Mcu.Pin15=PB3
+Mcu.Pin16=PB4
+Mcu.Pin17=PB5
+Mcu.Pin18=PB6
+Mcu.Pin19=PB7
+Mcu.Pin2=PA1
+Mcu.Pin20=VP_FREERTOS_VS_ENABLE
+Mcu.Pin21=VP_SYS_VS_tim1
+Mcu.Pin22=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin23=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin24=VP_TIM8_VS_no_output1
+Mcu.Pin3=PA4
+Mcu.Pin4=PA5
+Mcu.Pin5=PA7
+Mcu.Pin6=PB13
+Mcu.Pin7=PB14
+Mcu.Pin8=PB15
+Mcu.Pin9=PA9
+Mcu.PinsNb=25
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303CCTx
@@ -142,6 +169,7 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.CAN_RX1_IRQn=true\:5\:0\:false\:false\:true\:true\:true
 NVIC.DMA1_Channel1_IRQn=true\:5\:0\:false\:false\:true\:true\:false
 NVIC.DMA1_Channel3_IRQn=true\:5\:0\:false\:false\:true\:true\:false
+NVIC.DMA2_Channel1_IRQn=true\:5\:0\:false\:false\:true\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -150,7 +178,9 @@ NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:false
-NVIC.TIM2_IRQn=true\:5\:0\:false\:false\:true\:true\:true
+NVIC.TIM1_UP_TIM16_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.TimeBase=TIM1_UP_TIM16_IRQn
+NVIC.TimeBaseIP=TIM1
 NVIC.USB_LP_CAN_RX0_IRQn=true\:5\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA0.GPIOParameters=GPIO_Label
@@ -223,10 +253,8 @@ PCC.Seq0=0
 PCC.Series=STM32F3
 PCC.Temperature=25
 PCC.Vdd=3.6
-PF0-OSC_IN.Mode=HSE-External-Oscillator
+PF0-OSC_IN.Mode=HSE-External-Clock-Source
 PF0-OSC_IN.Signal=RCC_OSC_IN
-PF1-OSC_OUT.Mode=HSE-External-Oscillator
-PF1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -253,7 +281,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_TIM6_Init-TIM6-false-HAL-true,7-MX_DAC_Init-DAC-false-HAL-true,8-MX_CAN_Init-CAN-false-HAL-true,9-MX_I2C2_Init-I2C2-false-HAL-true,10-MX_TIM7_Init-TIM7-false-HAL-true,11-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_TIM6_Init-TIM6-false-HAL-true,7-MX_DAC_Init-DAC-false-HAL-true,8-MX_CAN_Init-CAN-false-HAL-true,9-MX_I2C2_Init-I2C2-false-HAL-true,10-MX_TIM8_Init-TIM8-false-HAL-true
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
 RCC.AHBFreq_Value=72000000
@@ -267,12 +295,12 @@ RCC.FCLKCortexFreq_Value=72000000
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=72000000
 RCC.HSEPLLFreq_Value=8000000
-RCC.HSE_VALUE=16000000
+RCC.HSE_VALUE=8000000
 RCC.HSIPLLFreq_Value=4000000
 RCC.HSI_VALUE=8000000
 RCC.I2C1Freq_Value=8000000
 RCC.I2C2Freq_Value=8000000
-RCC.IPParameters=ADC12outputFreq_Value,ADC34outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSEPLLFreq_Value,HSE_VALUE,HSIPLLFreq_Value,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,LSE_VALUE,LSI_VALUE,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,RCC_PLLsource_Clock_Source_FROM_HSE,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSourceVirtual,TIM1Freq_Value,TIM2Freq_Value,TIM8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOOutput2Freq_Value
+RCC.IPParameters=ADC12outputFreq_Value,ADC34outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSEPLLFreq_Value,HSE_VALUE,HSIPLLFreq_Value,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,LSE_VALUE,LSI_VALUE,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSourceVirtual,TIM1Freq_Value,TIM2Freq_Value,TIM8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOOutput2Freq_Value
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=40000
 RCC.MCOFreq_Value=72000000
@@ -280,9 +308,8 @@ RCC.PLLCLKFreq_Value=72000000
 RCC.PLLMCOFreq_Value=36000000
 RCC.PLLMUL=RCC_PLL_MUL9
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
-RCC.RCC_PLLsource_Clock_Source_FROM_HSE=RCC_HSE_PREDIV_DIV2
 RCC.RTCFreq_Value=40000
-RCC.RTCHSEDivFreq_Value=500000
+RCC.RTCHSEDivFreq_Value=250000
 RCC.SYSCLKFreq_VALUE=72000000
 RCC.SYSCLKSourceVirtual=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TIM1Freq_Value=72000000
@@ -297,27 +324,25 @@ SH.COMP_DAC1_group.0=DAC_OUT1,DAC_OUT1
 SH.COMP_DAC1_group.ConfNb=1
 SH.COMP_DAC2_group.0=DAC_OUT2,Enable_DAC_OUT2
 SH.COMP_DAC2_group.ConfNb=1
-TIM2.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
-TIM2.IPParameters=Channel-Output Compare1 No Output,Prescaler,Period
-TIM2.Period=499
-TIM2.Prescaler=7199
 TIM6.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
-TIM6.IPParameters=Prescaler,Period,AutoReloadPreload
-TIM6.Period=49
+TIM6.IPParameters=Prescaler,Period,AutoReloadPreload,TIM_MasterOutputTrigger
+TIM6.Period=9
 TIM6.Prescaler=7199
-TIM7.IPParameters=Prescaler,Period
-TIM7.Period=49
-TIM7.Prescaler=7199
+TIM6.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+TIM8.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
+TIM8.IPParameters=Channel-Output Compare1 No Output,Prescaler,Period,TIM_MasterOutputTrigger,TIM_MasterOutputTrigger2
+TIM8.Period=9
+TIM8.Prescaler=7199
+TIM8.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+TIM8.TIM_MasterOutputTrigger2=TIM_TRGO2_UPDATE
 VP_FREERTOS_VS_ENABLE.Mode=Enabled
 VP_FREERTOS_VS_ENABLE.Signal=FREERTOS_VS_ENABLE
-VP_SYS_VS_Systick.Mode=SysTick
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_TIM2_VS_ClockSourceINT.Mode=Internal
-VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
-VP_TIM2_VS_no_output1.Mode=Output Compare1 No Output
-VP_TIM2_VS_no_output1.Signal=TIM2_VS_no_output1
+VP_SYS_VS_tim1.Mode=TIM1
+VP_SYS_VS_tim1.Signal=SYS_VS_tim1
 VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
-VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
-VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
+VP_TIM8_VS_ClockSourceINT.Mode=Internal
+VP_TIM8_VS_ClockSourceINT.Signal=TIM8_VS_ClockSourceINT
+VP_TIM8_VS_no_output1.Mode=Output Compare1 No Output
+VP_TIM8_VS_no_output1.Signal=TIM8_VS_no_output1
 board=Motor_controller_F303CC
