ADC intervals tested

--- a/TrueStudioProject/Motor_controller_F303CC.ioc
+++ b/TrueStudioProject/Motor_controller_F303CC.ioc
@@ -2,7 +2,7 @@
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
 ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_2
 ADC1.Channel-IN2=ADC_CHANNEL_2
-ADC1.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV2
+ADC1.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV1
 ADC1.ContinuousConvMode=DISABLE
 ADC1.DMAContinuousRequests=ENABLE
 ADC1.DataAlign=ADC_DATAALIGN_RIGHT
@@ -34,7 +34,7 @@ ADC1.master=1
 ADC2.Channel-10\#ChannelRegularConversion=ADC_CHANNEL_4
 ADC2.Channel-IN4=ADC_CHANNEL_4
 ADC2.Channel-IN5=ADC_CHANNEL_5
-ADC2.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV2
+ADC2.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV1
 ADC2.ContinuousConvMode=DISABLE
 ADC2.DMAContinuousRequests=ENABLE
 ADC2.DataAlign=ADC_DATAALIGN_RIGHT
@@ -136,30 +136,31 @@ Mcu.Name=STM32F303C(B-C)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PF0-OSC_IN
 Mcu.Pin1=PA0
-Mcu.Pin10=PA10
-Mcu.Pin11=PA11
-Mcu.Pin12=PA12
-Mcu.Pin13=PA13
-Mcu.Pin14=PA14
-Mcu.Pin15=PB3
-Mcu.Pin16=PB4
-Mcu.Pin17=PB5
-Mcu.Pin18=PB6
-Mcu.Pin19=PB7
+Mcu.Pin10=PA9
+Mcu.Pin11=PA10
+Mcu.Pin12=PA11
+Mcu.Pin13=PA12
+Mcu.Pin14=PA13
+Mcu.Pin15=PA14
+Mcu.Pin16=PB3
+Mcu.Pin17=PB4
+Mcu.Pin18=PB5
+Mcu.Pin19=PB6
 Mcu.Pin2=PA1
-Mcu.Pin20=VP_FREERTOS_VS_ENABLE
-Mcu.Pin21=VP_SYS_VS_tim1
-Mcu.Pin22=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin23=VP_TIM8_VS_ClockSourceINT
-Mcu.Pin24=VP_TIM8_VS_no_output1
+Mcu.Pin20=PB7
+Mcu.Pin21=VP_FREERTOS_VS_ENABLE
+Mcu.Pin22=VP_SYS_VS_tim1
+Mcu.Pin23=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin24=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin25=VP_TIM8_VS_no_output1
 Mcu.Pin3=PA4
 Mcu.Pin4=PA5
 Mcu.Pin5=PA7
-Mcu.Pin6=PB13
-Mcu.Pin7=PB14
-Mcu.Pin8=PB15
-Mcu.Pin9=PA9
-Mcu.PinsNb=25
+Mcu.Pin6=PB1
+Mcu.Pin7=PB13
+Mcu.Pin8=PB14
+Mcu.Pin9=PB15
+Mcu.PinsNb=26
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303CCTx
@@ -215,6 +216,10 @@ PA7.Mode=IN4-Single-Ended
 PA7.Signal=ADC2_IN4
 PA9.Mode=I2C
 PA9.Signal=I2C2_SCL
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=Test
+PB1.Locked=true
+PB1.Signal=GPIO_Output
 PB13.GPIOParameters=GPIO_Label
 PB13.GPIO_Label=LED_Y
 PB13.Locked=true
@@ -326,13 +331,13 @@ SH.COMP_DAC2_group.0=DAC_OUT2,Enable_DAC_OUT2
 SH.COMP_DAC2_group.ConfNb=1
 TIM6.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM6.IPParameters=Prescaler,Period,AutoReloadPreload,TIM_MasterOutputTrigger
-TIM6.Period=9
-TIM6.Prescaler=7199
+TIM6.Period=49
+TIM6.Prescaler=71
 TIM6.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM8.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
 TIM8.IPParameters=Channel-Output Compare1 No Output,Prescaler,Period,TIM_MasterOutputTrigger,TIM_MasterOutputTrigger2
-TIM8.Period=9
-TIM8.Prescaler=7199
+TIM8.Period=49
+TIM8.Prescaler=71
 TIM8.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM8.TIM_MasterOutputTrigger2=TIM_TRGO2_UPDATE
 VP_FREERTOS_VS_ENABLE.Mode=Enabled
