CAN module testes with loopback interface and integrated with Matlab code, WIP

--- a/TrueStudioProject/Motor_controller_F303CC.ioc
+++ b/TrueStudioProject/Motor_controller_F303CC.ioc
@@ -60,8 +60,8 @@ ADC2.SamplingTime-10\#ChannelRegularConversion=ADC_SAMPLETIME_181CYCLES_5
 ADC2.ScanConvMode=ADC_SCAN_DISABLE
 ADC2.master=1
 CAN.ABOM=ENABLE
-CAN.BS1=CAN_BS1_7TQ
-CAN.BS2=CAN_BS2_4TQ
+CAN.BS1=CAN_BS1_4TQ
+CAN.BS2=CAN_BS2_3TQ
 CAN.CalculateTimeBit=4000
 CAN.CalculateTimeQuantum=500.0
 CAN.IPParameters=Prescaler,BS1,BS2,SJW,CalculateTimeQuantum,CalculateTimeBit,ABOM
@@ -98,14 +98,16 @@ Dma.Request0=DAC_CH1
 Dma.Request1=ADC1
 Dma.Request2=ADC2
 Dma.RequestsNb=3
-FREERTOS.BinarySemaphores01=ADC1,Static,ADC1_SEM_ControlBlock;CAN,Static,CAN_SEM_ControlBlock;ADC2,Static,ADC2_SEM_ControlBlock;Matlab_SEM,Static,Matlab_ControlBlock
+FREERTOS.BinarySemaphores01=ADC1,Static,ADC1_SEM_ControlBlock;CAN,Static,CAN_SEM_ControlBlock;ADC2,Static,ADC2_SEM_ControlBlock;Matlab_SEM,Static,Matlab_ControlBlock;CAN_RX,Static,CAN_RXControlBlock
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,configTICK_RATE_HZ,configMINIMAL_STACK_SIZE,configTOTAL_HEAP_SIZE,FootprintOK,MEMORY_ALLOCATION,configUSE_TIMERS,BinarySemaphores01,Timers01
+FREERTOS.IPParameters=Tasks01,configTICK_RATE_HZ,configMINIMAL_STACK_SIZE,configTOTAL_HEAP_SIZE,FootprintOK,MEMORY_ALLOCATION,configUSE_TIMERS,BinarySemaphores01,Timers01,configTIMER_TASK_PRIORITY,configTIMER_TASK_STACK_DEPTH
 FREERTOS.MEMORY_ALLOCATION=1
-FREERTOS.Tasks01=defaultTask,-3,256,StartDefaultTask,Default,NULL,Static,defaultTaskBuffer,defaultTaskControlBlock;CAN_IRQ,2,1024,CAN_IRQ_Entry,Default,NULL,Static,CAN_Buffer,CAN_ControlBlock;Matlab,0,1024,Matlab_Entry,Default,NULL,Static,MatlabBuffer,MatlabControlBlock;ADC1_IRQ,1,1024,ADC1_Entry,Default,NULL,Static,ADC1_Buffer,ADC1_ControlBlock;ADC2_IRQ,1,1024,ADC2_Entry,Default,NULL,Static,ADC2_5Buffer,ADC2_ControlBlock
+FREERTOS.Tasks01=defaultTask,-3,256,StartDefaultTask,Default,NULL,Static,defaultTaskBuffer,defaultTaskControlBlock;CAN_IRQ,2,1024,CAN_IRQ_Entry,Default,NULL,Static,CAN_Buffer,CAN_ControlBlock;Matlab,0,1024,Matlab_Entry,Default,NULL,Static,MatlabBuffer,MatlabControlBlock;ADC1_IRQ,1,1024,ADC1_Entry,Default,NULL,Static,ADC1_Buffer,ADC1_ControlBlock;ADC2_IRQ,1,1024,ADC2_Entry,Default,NULL,Static,ADC2_5Buffer,ADC2_ControlBlock;CAN_IRQ_Rx,2,1024,CAN_IRQ_Rx_Entry,Default,NULL,Static,CAN_Rx_Buffer,CAN_Rx_ControlBlock;TB_CAN,-2,256,TB_CAN_Entry,Default,NULL,Static,TB_CAN_7Buffer,TB_CAN_ControlBlock
 FREERTOS.Timers01=MatlabTimer,MatlabTimerCallback,osTimerPeriodic,Default,NULL,Static,MatlabTimerControlBlock
 FREERTOS.configMINIMAL_STACK_SIZE=256
 FREERTOS.configTICK_RATE_HZ=50
+FREERTOS.configTIMER_TASK_PRIORITY=6
+FREERTOS.configTIMER_TASK_STACK_DEPTH=256
 FREERTOS.configTOTAL_HEAP_SIZE=32000
 FREERTOS.configUSE_TIMERS=1
 File.Version=6
@@ -168,6 +170,7 @@ MxCube.Version=4.25.0
 MxDb.Version=DB.4.0.250
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.CAN_RX1_IRQn=true\:5\:0\:false\:false\:true\:true\:true
+NVIC.CAN_SCE_IRQn=true\:5\:0\:false\:false\:true\:true\:true
 NVIC.DMA1_Channel1_IRQn=true\:5\:0\:false\:false\:true\:true\:false
 NVIC.DMA1_Channel3_IRQn=true\:5\:0\:false\:false\:true\:true\:false
 NVIC.DMA2_Channel1_IRQn=true\:5\:0\:false\:false\:true\:true\:false
@@ -182,6 +185,7 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:false
 NVIC.TIM1_UP_TIM16_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.TimeBase=TIM1_UP_TIM16_IRQn
 NVIC.TimeBaseIP=TIM1
+NVIC.USB_HP_CAN_TX_IRQn=true\:5\:0\:false\:false\:true\:true\:true
 NVIC.USB_LP_CAN_RX0_IRQn=true\:5\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA0.GPIOParameters=GPIO_Label
