change frequency of timer 16

--- a/BamocarControlBoard/BamocarControlBoard.ioc
+++ b/BamocarControlBoard/BamocarControlBoard.ioc
@@ -3,10 +3,11 @@ CAN.BS1=CAN_BS1_4TQ
 CAN.BS2=CAN_BS2_3TQ
 CAN.CalculateTimeBit=4000
 CAN.CalculateTimeQuantum=500.0
-CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit,BS2,BS1,SJW,Prescaler,Mode
+CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit,BS2,BS1,SJW,Prescaler,Mode,TXFP
 CAN.Mode=CAN_MODE_NORMAL
 CAN.Prescaler=18
 CAN.SJW=CAN_SJW_4TQ
+CAN.TXFP=ENABLE
 Dma.Request0=USART2_RX
 Dma.Request1=USART2_TX
 Dma.RequestsNb=2
@@ -170,8 +171,8 @@ RCC.USART3Freq_Value=36000000
 RCC.USBFreq_Value=72000000
 RCC.VCOOutput2Freq_Value=8000000
 TIM16.IPParameters=Prescaler,Period
-TIM16.Period=719
-TIM16.Prescaler=9999
+TIM16.Period=71
+TIM16.Prescaler=999
 USART2.BaudRate=115200
 USART2.IPParameters=VirtualMode-Asynchronous,OverSampling,WordLength,BaudRate
 USART2.OverSampling=UART_OVERSAMPLING_8
