update, issues with new True Studio version

--- a/TrueStudioProject/Motor_controller_F303CC.ioc
+++ b/TrueStudioProject/Motor_controller_F303CC.ioc
@@ -67,42 +67,45 @@ CAN.CalculateTimeQuantum=500.0
 CAN.IPParameters=Prescaler,BS1,BS2,SJW,CalculateTimeQuantum,CalculateTimeBit,ABOM
 CAN.Prescaler=18
 CAN.SJW=CAN_SJW_4TQ
-Dma.ADC1.1.Direction=DMA_PERIPH_TO_MEMORY
-Dma.ADC1.1.Instance=DMA1_Channel1
-Dma.ADC1.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.ADC1.1.MemInc=DMA_MINC_ENABLE
-Dma.ADC1.1.Mode=DMA_CIRCULAR
-Dma.ADC1.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.ADC1.1.PeriphInc=DMA_PINC_DISABLE
-Dma.ADC1.1.Priority=DMA_PRIORITY_HIGH
-Dma.ADC1.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.ADC2.2.Direction=DMA_PERIPH_TO_MEMORY
-Dma.ADC2.2.Instance=DMA2_Channel1
-Dma.ADC2.2.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.ADC2.2.MemInc=DMA_MINC_ENABLE
-Dma.ADC2.2.Mode=DMA_CIRCULAR
-Dma.ADC2.2.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.ADC2.2.PeriphInc=DMA_PINC_DISABLE
-Dma.ADC2.2.Priority=DMA_PRIORITY_HIGH
-Dma.ADC2.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.DAC_CH1.0.Direction=DMA_MEMORY_TO_PERIPH
-Dma.DAC_CH1.0.Instance=DMA1_Channel3
-Dma.DAC_CH1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.DAC_CH1.0.MemInc=DMA_MINC_DISABLE
-Dma.DAC_CH1.0.Mode=DMA_CIRCULAR
-Dma.DAC_CH1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.DAC_CH1.0.PeriphInc=DMA_PINC_DISABLE
-Dma.DAC_CH1.0.Priority=DMA_PRIORITY_HIGH
-Dma.DAC_CH1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.Request0=DAC_CH1
-Dma.Request1=ADC1
-Dma.Request2=ADC2
+DAC.DAC_Trigger=DAC_TRIGGER_SOFTWARE
+DAC.DAC_Trigger2=DAC_TRIGGER_SOFTWARE
+DAC.IPParameters=DAC_Trigger2,DAC_Trigger
+Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC1.0.Instance=DMA1_Channel1
+Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
+Dma.ADC1.0.Mode=DMA_CIRCULAR
+Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC1.0.Priority=DMA_PRIORITY_HIGH
+Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.ADC2.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC2.1.Instance=DMA2_Channel1
+Dma.ADC2.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC2.1.MemInc=DMA_MINC_ENABLE
+Dma.ADC2.1.Mode=DMA_CIRCULAR
+Dma.ADC2.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC2.1.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC2.1.Priority=DMA_PRIORITY_HIGH
+Dma.ADC2.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.DAC_CH1.2.Direction=DMA_MEMORY_TO_PERIPH
+Dma.DAC_CH1.2.Instance=DMA1_Channel3
+Dma.DAC_CH1.2.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.DAC_CH1.2.MemInc=DMA_MINC_DISABLE
+Dma.DAC_CH1.2.Mode=DMA_CIRCULAR
+Dma.DAC_CH1.2.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.DAC_CH1.2.PeriphInc=DMA_PINC_DISABLE
+Dma.DAC_CH1.2.Priority=DMA_PRIORITY_HIGH
+Dma.DAC_CH1.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.Request0=ADC1
+Dma.Request1=ADC2
+Dma.Request2=DAC_CH1
 Dma.RequestsNb=3
-FREERTOS.BinarySemaphores01=ADC1,Static,ADC1_SEM_ControlBlock;CAN,Static,CAN_SEM_ControlBlock;ADC2,Static,ADC2_SEM_ControlBlock;Matlab_SEM,Static,Matlab_ControlBlock;CAN_RX,Static,CAN_RXControlBlock;MPU_SEM,Static,MPU_SEM_ControlBlock
+FREERTOS.BinarySemaphores01=ADC1,Static,ADC1_SEM_ControlBlock;CAN,Static,CAN_SEM_ControlBlock;ADC2,Static,ADC2_SEM_ControlBlock;Matlab_SEM,Static,Matlab_ControlBlock;CAN_RX,Static,CAN_RXControlBlock;MPU_SEM,Static,MPU_SEM_ControlBlock;MatlabCanSync,Static,MatCanControlBlock
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configTICK_RATE_HZ,configMINIMAL_STACK_SIZE,configTOTAL_HEAP_SIZE,FootprintOK,MEMORY_ALLOCATION,configUSE_TIMERS,BinarySemaphores01,Timers01,configTIMER_TASK_PRIORITY,configTIMER_TASK_STACK_DEPTH
 FREERTOS.MEMORY_ALLOCATION=1
-FREERTOS.Tasks01=defaultTask,-3,256,StartDefaultTask,Default,NULL,Static,defaultTaskBuffer,defaultTaskControlBlock;CAN_IRQ,2,1024,CAN_IRQ_Entry,Default,NULL,Static,CAN_Buffer,CAN_ControlBlock;Matlab,0,1024,Matlab_Entry,Default,NULL,Static,MatlabBuffer,MatlabControlBlock;ADC1_IRQ,1,1024,ADC1_Entry,Default,NULL,Static,ADC1_Buffer,ADC1_ControlBlock;ADC2_IRQ,1,1024,ADC2_Entry,Default,NULL,Static,ADC2_5Buffer,ADC2_ControlBlock;CAN_IRQ_Rx,2,1024,CAN_IRQ_Rx_Entry,Default,NULL,Static,CAN_Rx_Buffer,CAN_Rx_ControlBlock;TB_CAN,-2,256,TB_CAN_Entry,Default,NULL,Static,TB_CAN_7Buffer,TB_CAN_ControlBlock;MPU,1,256,MPU_Entry,Default,NULL,Static,MPU_Buffer,MPU_ControlBlock
+FREERTOS.Tasks01=defaultTask,-3,256,StartDefaultTask,Default,NULL,Static,defaultTaskBuffer,defaultTaskControlBlock;CAN_IRQ,1,1024,CAN_IRQ_Entry,Default,NULL,Static,CAN_Buffer,CAN_ControlBlock;Matlab,0,1024,Matlab_Entry,Default,NULL,Static,MatlabBuffer,MatlabControlBlock;ADC1_IRQ,1,1024,ADC1_Entry,Default,NULL,Static,ADC1_Buffer,ADC1_ControlBlock;ADC2_IRQ,1,1024,ADC2_Entry,Default,NULL,Static,ADC2_5Buffer,ADC2_ControlBlock;CAN_IRQ_Rx,2,1024,CAN_IRQ_Rx_Entry,Default,NULL,Static,CAN_Rx_Buffer,CAN_Rx_ControlBlock;TB_CAN,-2,256,TB_CAN_Entry,Default,NULL,Static,TB_CAN_7Buffer,TB_CAN_ControlBlock;MPU,1,256,MPU_Entry,Default,NULL,Static,MPU_Buffer,MPU_ControlBlock
 FREERTOS.Timers01=MatlabTimer,MatlabTimerCallback,osTimerPeriodic,Default,NULL,Static,MatlabTimerControlBlock
 FREERTOS.configMINIMAL_STACK_SIZE=256
 FREERTOS.configTICK_RATE_HZ=50
@@ -167,8 +170,8 @@ Mcu.PinsNb=27
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303CCTx
-MxCube.Version=4.25.0
-MxDb.Version=DB.4.0.250
+MxCube.Version=4.26.1
+MxDb.Version=DB.4.0.261
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.CAN_RX1_IRQn=true\:5\:0\:false\:false\:true\:true\:true
 NVIC.CAN_SCE_IRQn=true\:5\:0\:false\:false\:true\:true\:true
@@ -273,11 +276,11 @@ ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=3
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=true
-ProjectManager.CustomerFirmwarePackage=C\:/Users/Piotr/STM32Cube/Repository/STM32Cube_FW_F3_V1.9.0
+ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F303CCTx
-ProjectManager.FirmwarePackage=STM32Cube FW_F3 V1.9.0
+ProjectManager.FirmwarePackage=STM32Cube FW_F3 V1.9.1
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
@@ -292,7 +295,7 @@ ProjectManager.ProjectName=Motor_controller_F303CC
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
-ProjectManager.UnderRoot=true
+ProjectManager.UnderRoot=false
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_TIM6_Init-TIM6-false-HAL-true,7-MX_DAC_Init-DAC-false-HAL-true,8-MX_CAN_Init-CAN-false-HAL-true,9-MX_I2C2_Init-I2C2-false-HAL-true,10-MX_TIM8_Init-TIM8-false-HAL-true
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
